Testing and Fixing Collector Interface